name:                tasty-expected-failure
version:             0.11.0.4
synopsis:            Mark tasty tests as failure expected
description:
 With the function 'Test.Tasty.ExpectedFailure.expectFail' in the provided module
 "Test.Tasty.ExpectedFailure", you can mark that you expect test cases to fail,
 and not to pass.
 .
 This can for example be used for test-driven development: Create the tests,
 mark them with 'Test.Tasty.ExpectedFailure.expectFail', and you can still push
 to the main branch, without your continuous integration branch failing.
 .
 Once someone implements the feature or fixes the bug (maybe unknowingly), the
 test suite will tell him so, due to the now unexpectedly passing test, and he
 can remove the 'Test.Tasty.ExpectedFailure.expectFail' marker.
 .
 The module also provides 'Test.Tasty.ExpectedFailure.ignoreTest' to avoid
 running a test. Both funtions are implemented via the more general
 'Test.Tasty.ExpectedFailure.wrapTest', which is also provided.
homepage: http://github.com/nomeata/tasty-expected-failure
license:             MIT
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
copyright:           2015 Joachim Breitner
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with: GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2, GHC == 7.11.*, GHC == 8.0.*

library
  exposed-modules:
    Test.Tasty.ExpectedFailure
  build-depends:
    base >= 4.5 && <4.10,
    tagged >= 0.7 && < 0.9,
    tasty >= 0.11
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/nomeata/tasty-expected-failure
